# syk4y

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: publish.yml
syk4y/: compress.py
